--- a/buoyancy/index.html
+++ b/buoyancy/index.html
@@ -20,7 +20,7 @@ swfobject.embedSWF = function(url, cont, width, height){
     player.load({ url: url });
 }
 
-swfobject.embedSWF('https://e9x.github.io/ruffle-example/1on1soccer_24.swf', 'ruffle', 500, 500);
+swfobject.embedSWF('https://github.com/PhET-HTML5/html/raw/main/buoyancy/buoyancy.swf', 'ruffle', 1300, 700);
         </script>
     </body>
 </html>
