--- a/testing/index.html
+++ b/testing/index.html
@@ -15,7 +15,7 @@
             position: relative;
             width: 100%;
             height: 600px;
-            background: no-repeat center/cover url('./todo.jpg');
+            background: no-repeat center/cover url('./awayfl/todo.jpg');
         }
 
         #flashBlock {
@@ -73,7 +73,7 @@
 
     <div id = 'root'>
         <awayfl-player id = 'flashBlock'
-            runtimebaseurl = '../dist/'
+            runtimebaseurl = '../html/dist'
             src = './buoyancy.swf'
             onprogress = 'onProgress'
             onload = 'onLoad'
