--- a/testing/index.html
+++ b/testing/index.html
@@ -73,7 +73,7 @@
 
     <div id = 'root'>
         <awayfl-player id = 'flashBlock'
-            runtimebaseurl = '../html/dist'
+            runtimebaseurl = '../dist'
             src = './buoyancy.swf'
             onprogress = 'onProgress'
             onload = 'onLoad'
